--- a/growing-food-api/requirements.txt
+++ b/growing-food-api/requirements.txt
@@ -1,4 +1,4 @@
-Django==3.1.2
+Django==4.0.5
 psycopg2-binary==2.8.6
 djangorestframework==3.13.1
 black==22.3.0
@@ -6,3 +6,4 @@ pytest==7.1.2
 pytest-cov==3.0.0
 pytest-django==4.5.2
 httmock==1.4.0
+django-cors-headers==3.13.0
